--- a/chewbacca/rhio/moves/head/values.conf
+++ b/chewbacca/rhio/moves/head/values.conf
@@ -1,9 +1,13 @@
 [float] fallBackwardPitch.value = 80
 [float] fallBackwardPitch.comment = Head pitch goal value during backward falls [deg]
-[float] fallForwardPitch.value = -45
+[float] fallForwardPitch.value = -30
 [float] fallForwardPitch.comment = Head pitch goal value during forward falls [deg]
 [float] forceTrackDist.value = 0.75
 [float] forceTrackDist.comment = Distance to force watching the ball
+[float] handleMaxPan.value = 110
+[float] handleMaxPan.comment = Maximum pan before we reach the handle
+[float] handleMinTilt.value = 40
+[float] handleMinTilt.comment = Minimum tilt value when the pan is reached
 [float] localizeMaxPan.value = 135
 [float] localizeMaxPan.comment = Maximum pan wished for an image point
 [float] localizeMaxTilt.value = 60
@@ -26,9 +30,17 @@
 [float] minOverlap.comment = Minimal overlap between control points [degrees]
 [float] minTilt.value = -5
 [float] minTilt.comment = Minimum tilt wished for an image point
+[float] nearTrackDist.value = 0.7
+[float] nearTrackDist.comment = Distance at which tracking becomes longer
+[float] nearTrackingPeriod.value = 3
+[float] nearTrackingPeriod.comment = Duration of tracking when ball_dist < nearTrackDist [s]
 [float] scanExtraPeriod.value = 0.5
 [float] scanExtraPeriod.comment = Extra time to ensure we are looking everywhere [s]
 [float] smoothing.value = 0.9
 [float] smoothing.comment = smoothing of the orders applied for both scan and track
 [float] trackingPeriod.value = 1.5
-[float] trackingPeriod.comment = Duration of scan cycle [s]
+[float] trackingPeriod.comment = Duration of tracking when ball_dist >= nearTrackDist [s]
+[float] vcMaxSpeed.value = 60
+[float] vcMaxSpeed.comment = Maximal angular speed with visual compass [deg/s]
+[float] visualCompassOffset.value = -20
+[float] visualCompassOffset.comment = Offset on head_pitch when using visualCompass [deg]
